# cspice-cmake

./: .gitignore  cspice-config.cmake.in  meson.build
include/: meson.build
include/cspice/: SpiceDSK.h  SpiceUsr.h  SpiceZad.h  SpiceZdf.h  SpiceZfc.h  SpiceZim.h  SpiceZmc.h  SpiceZpr.h  SpiceZst.h  f2c.h  fio.h  fp.h
src/brief_c/: brief.c  disply.c  distim.c  filtem.c  getnam.c  maknam.c  meson.build  objact.c  objadd.c  objcf1.c  objcf2.c  objchk.c  objcmp.c  objfnd.c  objget.c  objinl.c  objmod.c  objnth.c  objnxt.c  objrem.c  objsbc.c  objsbf.c  objset.c  objsiz.c  objval.c  prname.c  rndem.c  writit.c
src/chrnos_c/: chronos.c  crcnst.c  cronos.c  dsplay.c  ls.c  lstmid.c  meson.build  speakr.c
src/ckbref_c/: ckbrief.c  dispsm.c  fixuni.c  meson.build  prinst.c  repmcw.c  timecn.c
src/commnt_c/: clcomm.c  commnt.c  meson.build
src/cook_c/: meson.build  simple.c  states.c  subpt.c  tictoc.c
src/cspice/: F77_aloc.c  abort_.c  accept.c  alltru.c  ana.c  appndc.c  appndc_c.c  appndd.c  appndd_c.c  appndi.c  appndi_c.c  approx.c  astrip.c  axisar.c  axisar_c.c  azlcpo.c  azlcpo_c.c  azlrec.c  azlrec_c.c  b1900.c  b1900_c.c  b1950.c  b1950_c.c  backspace.c  badkpv.c  badkpv_c.c  bedec.c  beint.c  benum.c  beuns.c  bltfrm.c  bltfrm_c.c  bodc2n.c  bodc2n_c.c  bodc2s.c  bodc2s_c.c  boddef.c  boddef_c.c  bodeul.c  bodfnd.c  (+2190 more)
src/csupport/: batch.c  bboard_1.c  bestwd.c  builtn.c  cbget_1.c  cbinit_1.c  cbput_1.c  cbrem_1.c  changu.c  chbfit.c  ck3sdn.c  cmloop.c  cmmore.c  cmredo.c  cmstup.c  cnfirm.c  cnfirm_1.c  convbt.c  convrt_2.c  convrt_3.c  convtb.c  cputim.c  crtptr.c  curtim.c  cutstr.c  dafacu.c  dafecu.c  dcyphr.c  dimcb_1.c  dpstre.c  dspvrs.c  echo.c  edtcmd.c  edtcom.c  exesys.c  expfnm_1.c  expfnm_2.c  flgrpt.c  fndcmp.c  fndntk.c  (+171 more)
src/dskbrief_c/: attcmp.c  cortab.c  dskb04.c  dskbrief.c  dskd04.c  dski04.c  dspdsc.c  dspgap.c  grpseg.c  meson.build  prcinf.c  sum02.c  sum04.c
src/dskexp_c/: dskexp.c  meson.build
src/frmdif_c/: chwcml.c  ckcovr.c  dpstrp.c  dr2str.c  et2str.c  frmdiff.c  getqav.c  ldklst.c  main.c  meson.build  rtdiff.c  sc01s2d.c
src/inspkt_c/: bgroup_1.c  chunk.c  clmgr.c  expand.c  fetcha.c  fgroup_1.c  fmtdp.c  fmtint.c  fmttim.c  hlpmen.c  hlptxt.c  inspekt.c  inspkn.c  kerman.c  list.c  liter.c  meson.build  namxpn.c  nspcht.c  nspdel.c  nspflg.c  nspfnd.c  nspfrp.c  nsphi.c  nsphlp.c  nspint.c  nspset.c  nspshc.c  nspsho.c  nsptab.c  nsptv.c  nspvrb.c  other.c  param.c  params.c  prep.c  preprc.c  proc.c  setchr.c  size.c  (+40 more)
src/mkdsk_c/: addcom.c  extmsi.c  makvtx.c  meson.build  mkdsk.c  mkgrid.c  mkvarr.c  prcinf.c  prcset.c  prscml.c  rc2cor.c  rdffdi.c  rdffpl.c  rdgrd5.c  wrtdsk.c  zzpsxtnt.c  zztrgnvx.c  zzvoxscl.c  zzwseg02.c
src/mkspk_c/: chckdo.c  cmlarg.c  meson.build  mkspk.c  parsdo.c  redbuf.c  reorbd.c  setelm.c  setup.c  tle2spk.c
src/msopck_c/: linrot_m.c  meson.build  mkfclk.c  msopck.c  zzmckdmp.c
src/spacit_c/: ckgss.c  ckwss.c  getchr.c  getint.c  meson.build  pckgss.c  pckwss.c  spab2t.c  spacit.c  spalog.c  spardc.c  spasum.c  spat2b.c  spkgss.c  spkwss.c  sumck.c  sumek.c  sumpck.c  sumspk.c
src/spkdif_c/: chwcml.c  getsta.c  ldklst.c  meson.build  spkdiff.c  stdiff.c
src/spkmrg_c/: cparse_2.c  meson.build  rdcmd.c  spkmerge.c  wrdnln.c
src/tobin_c/: meson.build  tobin.c  zzconvtb.c
src/toxfr_c/: meson.build  toxfr.c
src/versn_c/: main.c  meson.build  version.c
