project('cspice', 'c', version : 'SPICE library 3.14.0; Toolkit N0066')

includes = include_directories('include')

compiler = meson.get_compiler('c')
math_dep = compiler.find_library('m', required : false)

add_global_arguments([ '-DNON_UNIX_STDIO' ], language : 'c')

subdir('include')
subdir('src/cspice')
subdir('src/csupport')
subdir('src/brief_c')
subdir('src/chrnos_c')
subdir('src/ckbref_c')
subdir('src/commnt_c')
subdir('src/cook_c')
subdir('src/dskbrief_c')
subdir('src/dskexp_c')
subdir('src/frmdif_c')
subdir('src/inspkt_c')
subdir('src/mkdsk_c')
subdir('src/mkspk_c')
subdir('src/msopck_c')
subdir('src/spacit_c')
subdir('src/spkdif_c')
subdir('src/spkmrg_c')
subdir('src/tobin_c')
subdir('src/toxfr_c')
subdir('src/versn_c')
