cspice_headers = [
    'cspice/f2c.h',
    'cspice/f2cMang.h',
    'cspice/fio.h',
    'cspice/fmt.h',
    'cspice/fp.h',
    'cspice/lio.h',
    'cspice/rawio.h',
    'cspice/signal1.h',
    'cspice/SpiceCel.h',
    'cspice/SpiceCK.h',
    'cspice/SpiceDLA.h',
    'cspice/SpiceDSK.h',
    'cspice/SpiceDtl.h',
    'cspice/SpiceEK.h',
    'cspice/SpiceEll.h',
    'cspice/SpiceErr.h',
    'cspice/SpiceFrm.h',
    'cspice/SpiceGF.h',
    'cspice/SpiceOccult.h',
    'cspice/SpiceOsc.h',
    'cspice/SpicePln.h',
    'cspice/SpiceSPK.h',
    'cspice/SpiceSrf.h',
    'cspice/SpiceUsr.h',
    'cspice/SpiceZad.h',
    'cspice/SpiceZdf.h',
    'cspice/SpiceZfc.h',
    'cspice/SpiceZim.h',
    'cspice/SpiceZmc.h',
    'cspice/SpiceZpl.h',
    'cspice/SpiceZpr.h',
    'cspice/SpiceZrnm.h',
    'cspice/SpiceZst.h',
    'cspice/zzalloc.h',
    'cspice/zzerror.h' ]

install_headers(cspice_headers, subdir : 'cspice')
