subpt = executable(
    'subpt', 'subpt.c',
    include_directories : includes,
    link_with : [ libcsupport, libcspice ],
    dependencies : [ math_dep ],
    install : true)
tictoc = executable(
    'tictoc', 'tictoc.c',
    include_directories : includes,
    link_with : [ libcsupport, libcspice ],
    dependencies : [ math_dep ],
    install : true)
states = executable(
    'states', 'states.c',
    include_directories : includes,
    link_with : [ libcsupport, libcspice ],
    dependencies : [ math_dep ],
    install : true)
simple = executable(
    'simple', 'simple.c',
    include_directories : includes,
    link_with : [ libcsupport, libcspice ],
    dependencies : [ math_dep ],
    install : true)
