libcsupport = static_library(
    'csupport', [
        'batch.c',
        'bboard_1.c',
        'bestwd.c',
        'builtn.c',
        'cbget_1.c',
        'cbinit_1.c',
        'cbput_1.c',
        'cbrem_1.c',
        'changu.c',
        'chbfit.c',
        'ck3sdn.c',
        'cmloop.c',
        'cmmore.c',
        'cmredo.c',
        'cmstup.c',
        'cnfirm_1.c',
        'cnfirm.c',
        'convbt.c',
        'convrt_2.c',
        'convrt_3.c',
        'convtb.c',
        'cputim.c',
        'crtptr.c',
        'curtim.c',
        'cutstr.c',
        'dafacu.c',
        'dafecu.c',
        'dcyphr.c',
        'dimcb_1.c',
        'dpstre.c',
        'dspvrs.c',
        'echo.c',
        'edtcmd.c',
        'edtcom.c',
        'exesys.c',
        'expfnm_1.c',
        'expfnm_2.c',
        'flgrpt.c',
        'fndcmp.c',
        'fndntk.c',
        'fndptk.c',
        'fnducv.c',
        'getcml.c',
        'getdel.c',
        'geteq.c',
        'getfnm_1.c',
        'getfnm.c',
        'getopt_1.c',
        'getopt_2.c',
        'getopt.c',
        'have.c',
        'header.c',
        'iovcmp.c',
        'langua.c',
        'lbdes_1.c',
        'lbget_1.c',
        'lbinit_1.c',
        'lbins_1.c',
        'lbpack_1.c',
        'lbrem_1.c',
        'lbupd_1.c',
        'logchk.c',
        'm2alph.c',
        'm2begr.c',
        'm2bodini.c',
        'm2bodtrn.c',
        'm2body.c',
        'm2cal.c',
        'm2chck.c',
        'm2clss.c',
        'm2core.c',
        'm2day.c',
        'm2diag.c',
        'm2engl.c',
        'm2epoc.c',
        'm2geta.c',
        'm2getb.c',
        'm2getc.c',
        'm2getd.c',
        'm2geti.c',
        'm2gmch.c',
        'm2have.c',
        'm2int.c',
        'm2ints.c',
        'm2keyw.c',
        'm2mon.c',
        'm2name.c',
        'm2ntem.c',
        'm2numb.c',
        'm2pars.c',
        'm2selb.c',
        'm2selc.c',
        'm2seld.c',
        'm2seli.c',
        'm2shll.c',
        'm2term.c',
        'm2thnq.c',
        'm2time.c',
        'm2tran.c',
        'm2trim.c',
        'm2unit.c',
        'm2wmch.c',
        'm2xist.c',
        'm2year.c',
        'makstr.c',
        'match.c',
        'matchc.c',
        'matche.c',
        'matchm.c',
        'matcho.c',
        'meta_2.c',
        'mspeld.c',
        'ncodec.c',
        'ncoded.c',
        'ncodei.c',
        'newfil_1.c',
        'newfil.c',
        'nicebt_1.c',
        'niceio_3.c',
        'nicepr_1.c',
        'no.c',
        'nspio.c',
        'nsplgr.c',
        'nspopl.c',
        'nsppwd.c',
        'nspsav.c',
        'nspxcp.c',
        'nthuqt.c',
        'nthuqw.c',
        'nxtcom.c',
        'occurs.c',
        'pagman.c',
        'parcml.c',
        'pltfrm.c',
        'podaec.c',
        'podaed.c',
        'podaei.c',
        'podbec.c',
        'podbed.c',
        'podbei.c',
        'podbgc.c',
        'podbgd.c',
        'podbgi.c',
        'podcgc.c',
        'podcgd.c',
        'podcgi.c',
        'poddgc.c',
        'poddgd.c',
        'poddgi.c',
        'podegc.c',
        'podegd.c',
        'podegi.c',
        'podiec.c',
        'podied.c',
        'podiei.c',
        'podonc.c',
        'podond.c',
        'podoni.c',
        'podrec.c',
        'podred.c',
        'podrei.c',
        'podrgc.c',
        'podrgd.c',
        'podrgi.c',
        'prcomf.c',
        'prepsn.c',
        'prtrap.c',
        'pstack.c',
        'qlstnb.c',
        'qmini.c',
        'qrtrim.c',
        'qtran.c',
        'rc2grd.c',
        'rdstmn.c',
        'rdstmt.c',
        'reglon.c',
        'ressym.c',
        'rptsym.c',
        'sbget_1.c',
        'sbinit_1.c',
        'sbrem_1.c',
        'sbset_1.c',
        'scansl.c',
        'shosym.c',
        'sizecb_1.c',
        'spcacb.c',
        'spcacc.c',
        'stran.c',
        'syptrc.c',
        'syptri.c',
        'tabrpt.c',
        'trnlat.c',
        'txtops.c',
        'unitp.c',
        'upto.c',
        'utrans_2.c',
        'zzcapplt.c',
        'zzckcvr2.c',
        'zzckcvr3.c',
        'zzckcvr4.c',
        'zzckcvr5.c',
        'zzcke06.c',
        'zzdbrgap.c',
        'zzellplt.c',
        'zzellsec.c',
        'zzgetenv.c',
        'zzgetfat.c',
        'zzgrdplt.c',
        'zznsppok.c',
        'zztxtopn.c' ],
    include_directories : includes, install: true)
