libinspkt = static_library(
    'inspkt', [
        'nspcht.c',
        'nspflg.c',
        'var.c',
        'namxpn.c',
        'zzhlp004.c',
        'nspdel.c',
        'zzhlp012.c',
        'nsptab.c',
        'fmtdp.c',
        'chunk.c',
        'nsphlp.c',
        'zzhlp024.c',
        'zzhlp000.c',
        'nspsho.c',
        'zzhlp009.c',
        'zzhlp013.c',
        'zzhlp007.c',
        'zzhlp026.c',
        'zzhlp014.c',
        'zzhlp008.c',
        'zzhlp027.c',
        'zzhlp021.c',
        'subtex.c',
        'other.c',
        'fmtint.c',
        'tempb.c',
        'zzhlp017.c',
        'fetcha.c',
        'title.c',
        'inspkn.c',
        'zzhlp025.c',
        'size.c',
        'nspvrb.c',
        'fmttim.c',
        'fgroup_1.c',
        'prep.c',
        'zzhlp011.c',
        'zzhlp019.c',
        'zzhlp001.c',
        'nsphi.c',
        'zzhlp002.c',
        'list.c',
        'param.c',
        'setchr.c',
        'zzhlp031.c',
        'nsptv.c',
        'zzhlp030.c',
        'nspfrp.c',
        'params.c',
        'bgroup_1.c',
        'tokens.c',
        'wrtnpr.c',
        'nspshc.c',
        'nspset.c',
        'expand.c',
        'zzhlp020.c',
        'zzhlp032.c',
        'zzhlp029.c',
        'zzhlp028.c',
        'nspfnd.c',
        'zzhlp003.c',
        'zzhlp015.c',
        'preprc.c',
        'hlptxt.c',
        'zzhlp018.c',
        'zzhlp005.c',
        'hlpmen.c',
        'proc.c',
        'kerman.c',
        'zzhlp010.c',
        'zzhlp022.c',
        'clmgr.c',
        'zzhlp023.c',
        'nspint.c',
        'zzhlp016.c',
        'wrtprs.c',
        'zzhlp006.c',
        'liter.c',
         ],
   include_directories : includes)

inspekt = executable(
    'inspekt', [ 'inspekt.c', 'main.c' ],
    include_directories : includes,
    link_with : [ libinspkt, libcsupport, libcspice ],
    dependencies : [ math_dep ],
    install : true)
